--- a/public/styles.css
+++ b/public/styles.css
@@ -3,10 +3,33 @@
 }
 
 html,
-body,
-#root {
+body {
   width: 100%;
   height: 100%;
-  margin: 0;
-  padding: 0;
+  display: flex;
+  justify-content: center;
+  background-color: white;
 }
+#root {
+  height:100%;
+  width: 700px;
+  background-color: black;
+  display: flex;
+  justify-content: space-around;
+}
+
+
+#info {
+  position: absolute;
+	bottom: 22%;
+  font-size: 50px;
+  font-family: 'Gotham';
+  width: 300px;
+  height: 10%;
+  text-align: center;
+  color:#9ea59d;
+	z-index: 100;
+  border-radius: 15px;
+  background-color: #1db95478;
+}
+
