--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  src: url(./assets/fonts/BOTWFont.ttf);
+  font-family: zelda;
+}
+
 html,
 body {
   width: 100%;
@@ -13,9 +18,18 @@ body {
 #root {
   height:100%;
   width: 700px;
-  background-color:#101010;
+  background-color:#030314;
   display: flex;
   justify-content: space-around;
+}
+
+.title {
+  font-family: 'zelda';
+  position: absolute;
+  color: #1db95478;
+  text-shadow: -3px 2px rgba(14, 36, 2, 0.897);
+  font-size: 75px;
+  z-index: 100;
 }
 
 
@@ -24,7 +38,7 @@ body {
   position: absolute;
 	bottom: 22%;
   font-size: 50px;
-  font-family: 'Gotham';
+  font-family: 'zelda';
   width: 300px;
   height: 80px;
   text-align: center;
