--- a/public/styles.css
+++ b/public/styles.css
@@ -15,13 +15,13 @@ body {
   justify-content: center;
   background-color: black;
 }
-/* #root {
+#root {
   height:100%;
-  width: 700px;
+  width: 100%;
   background-color:#030314;
   display: flex;
-  justify-content: space-around;
-} */
+  justify-content: center;
+}
 
 .title {
   font-family: 'zelda';
@@ -37,6 +37,7 @@ body {
   height: 1000px;
   display: flex;
   justify-content: center;
+  background-color:#030314;
 }
 
 
@@ -70,3 +71,24 @@ body {
   background-color: #26d56378;
 }
 
+.nav-bar-container {
+  width: 700px;
+  background-color: #070766;
+  padding: 10px;
+}
+
+.nav-bar-container > ul {
+  display: flex;
+  font-size: 150%;
+  gap: 5px;
+  font-family: zelda;
+  list-style-type: none;
+  height: 40px;
+  align-items: center;
+  color: white;
+}
+
+li > a:visited {
+  text-decoration: none;
+  color: #9ea59d;
+}
