--- a/public/styles.css
+++ b/public/styles.css
@@ -33,7 +33,8 @@ body {
 }
 
 .landing-page {
-  width: 700px;
+  width: 1200px;
+  min-width: 800px;
   height: 1000px;
   display: flex;
   justify-content: center;
@@ -72,23 +73,34 @@ body {
 }
 
 .nav-bar-container {
-  width: 700px;
+  width: 1200px;
   background-color: #070766;
   padding: 10px;
 }
 
 .nav-bar-container > ul {
   display: flex;
-  font-size: 150%;
-  gap: 5px;
-  font-family: zelda;
+  gap: 20px;
   list-style-type: none;
   height: 40px;
-  align-items: center;
-  color: white;
+  justify-content: space-evenly;
+  align-content: center;
+
+  transition: font-size 0.5s;
 }
 
 li > a:visited {
   text-decoration: none;
   color: #9ea59d;
 }
+
+li > a {
+  font-size: 150%;
+  font-family: zelda;
+  color: white;
+}
+
+li > a:hover {
+  font-size: 160%;
+}
+
