--- a/public/styles.css
+++ b/public/styles.css
@@ -106,9 +106,13 @@ li > a:hover {
 
 .monsters-page-container {
   background-image: url('./assets/dark_logo.png');
-  background-position-y: 100px;
-  height: 100%;
-  background-size: contain;
+  background-attachment: fixed;
+  /* background-position-x: 200px; */
+  background-position-y: 120px;
+  /* background-position: center; */
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* height: 100%; */
   display: flex;
   flex-direction: column;
 }
@@ -152,13 +156,15 @@ li > a:hover {
   max-width: 1200px;
   border-radius: 15px;
   color: #9ea59d;
-  height: 500px;
+  height: 650px;
+  min-height: 600px;
   background-color:#07076694;
   align-self: center;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   flex-direction: column;
+  margin: 8px;
 }
 
 .details-container {
