--- a/public/styles.css
+++ b/public/styles.css
@@ -158,7 +158,7 @@ li > a:hover {
   color: #9ea59d;
   height: 650px;
   min-height: 600px;
-  background-color:#07076694;
+  background-color:#070766c7;
   align-self: center;
   display: flex;
   justify-content: center;
@@ -220,3 +220,16 @@ li > a:hover {
 
 }
 
+.fade-in-section {
+  opacity: 0;
+  transform: translateY(40vh);
+  visibility: hidden;
+  transition: opacity 500ms ease-out, transform 400ms ease-out,
+    visibility 1000ms ease-out;
+  will-change: opacity, transform, visibility;
+}
+.fade-in-section.is-visible {
+  opacity: 1;
+  transform: none;
+  visibility: visible;
+}
